[package]
name = "winvcon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive", "cargo"] }
tokio = { version = "1.39.2", features = ["io-std", "io-util", "macros", "net", "rt", "sync", "time"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading"
]

